--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ openpyxl==3.1.5
 python-docx==1.2.0
 typing_extensions==4.14.1
 Werkzeug==3.1.3
+gunicorn==23.0.0
+pandas==2.2.3
+xlwings==0.31.10
+docx2pdf==0.1.8
